infrastructure/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: ClusterIP
