infrastructure/whoami/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: websecure-base-domain
      port: 8443
      protocol: HTTPS
      hostname: whoami.${BASE_DOMAIN}
      tls:
        certificateRefs:
          - name: tls-whoami-ingress  # <==== Use the name defined in Certificate resource.
    - name: websecure-cluster-domain
      port: 8443
      protocol: HTTPS
      hostname: whoami.cluster-1.${BASE_DOMAIN}
      tls:
        certificateRefs:
          - name: tls-whoami-ingress  # <==== Use the name defined in Certificate resource.
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
spec:
  parentRefs:
    - name: whoami-gateway
  hostnames:
    - whoami.${BASE_DOMAIN}
    - whoami.cluster-1.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: whoami
          port: 9000
          weight: 1
