infrastructure/whoami/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http
spec:
  parentRefs:
    - name: traefik
      sectionName: web
      kind: Gateway
      namespace: traefik
  hostnames:
    - whoami.167.235.109.19.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: whoami
          namespace: whoami
          port: 80
